# taiasst

./: .env  .prettierignore  DESIGN.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: publish.yml  test-build.yml
src/: App.tsx  hero.ts  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/db/: base.rs  migrations.rs  mod.rs
src-tauri/src/file/: base.rs  config.rs  mod.rs  operations.rs  paths.rs  types.rs
src-tauri/src/http/: client.rs  handlers.rs  mod.rs
src-tauri/src/plugin/: api.rs  core.rs  manager.rs  mod.rs  plugin.rs  types.rs  utils.rs
src-tauri/src/system/: info.rs  mod.rs  usage.rs
src/components/: ChatHistory.tsx  MarkdownRenderer.tsx  PluginLoader.tsx  RightClickMenu.tsx  RightClickMenuArea.tsx  Sonner.tsx  ThemeSwitcher.tsx  WindowControls.tsx
src/components/auth/: AppWithActivityMonitor.tsx  AuthGuard.tsx  AuthScreen.tsx  PasswordSetup.tsx
src/context/: AuthContext.tsx  RightClickMenuContext.tsx  StartupContext.tsx  ThemeContext.tsx  color.ts  theme.ts
src/hooks/: useActivityMonitor.ts  useAuthShortcuts.ts
src/layout/: HeaderLayout.tsx  MainLayout.tsx  SiderBarLayout.tsx
src/routes/: AsyncRouter.tsx
src/services/: index.ts
src/store/: local.ts
src/styles/: highlight.css
src/themes/: base.ts  blue.ts  dark.ts  darkBlue.ts  darkGreen.ts  darkPurple.ts  green.ts  hero.ts  index.ts  light.ts  orange.ts  pink.ts  purple.ts  red.ts
src/types/: global.d.ts  local-tool.ts  password.ts  plugin.ts
src/utils/: animations.ts  crypto.ts  file-manager.ts  formatters.ts  local-tool-manager.ts  password.ts
(+116 files in other folders)
