[package]
name = "taiasst"
version = "0.2.0"
description = "Teexue Ai Assistant"
authors = ["teexue"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "taiasst_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "protocol-asset", "tray-icon" ] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
png = "0.17.16"
chrono = "0.4.40"
sysinfo = "0.34.1"
nvml-wrapper = "0.10.0"
tokio = { version = "1", features = ["full"] }
zip = "0.6.6"
tauri-plugin-http = "2"
tauri-plugin-log = "2"
log = "0.4"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }

# 安全加密依赖
rsa = "0.9"
rand = "0.8"
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
argon2 = "0.5"
base32 = "0.5"
qrcode = "0.14"
bip39 = "2.0"
hex = "0.4"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"

[dependencies.tauri-plugin-sql]
features = ["sqlite"]
version = "2.0.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

libloading = "0.8"
lazy_static = "1.4.0"

